# myai-novel-generator

./: .gitignore  Dockerfile  LICENSE  README.md  build_exe.py  exporter.py  install.bat  install.sh  project_manager.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_hf.py  start.bat
.github/: code_review_checklist.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: sync-hf.yml
config/: custom_prompts.json  generation_config.json  novel_tool_config.json
docs/: API_REFERENCE.md  CHANGELOG.md  COMPLETE_PROMPT_REFERENCE.md  DEPENDENCIES.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_QUICKSTART.md  PROMPT_OPTIMIZATION_GUIDE.md  USER_MANUAL.md
docs/archive/: ABSOLUTE_IMPORT_FIXES.md  BATCH_OUTLINE_GENERATION_FIX.md  COHERENCE_API_FIX.md  COMPLETION_REPORT.md  CONTEXT_CONFIG_GUIDE.md  CONTEXT_UNIFICATION_SUMMARY.md  CRITICAL_FIXES_REPORT.md  EXPORT_FIX.md  FINAL_FIX_REPORT.md  FINAL_REPORT.md  FULL_NOVEL_GENERATION_REPORT.md  GRADIO_COMPATIBILITY_FIX.md  IMPORT_PATH_FIXES.md  LOGGING_GUIDE.md  LOG_ANALYSIS_SOLUTION.md  MAX_TOKENS_SIMPLIFICATION.md  MIGRATION_PROGRESS.md  MODEL_CONFIG_FIX.md  OUTLINE_GENERATION_FIXES.md  OUTLINE_JSON_FIX.md  OUTLINE_JSON_FIX_V2.md  OUTLINE_MAX_TOKENS_CONFIG.md  OUTLINE_TOKEN_FIX.md  REFACTORING_PROGRESS.md  RETRY_AND_FIXES_SUMMARY.md  RETRY_QUICK_GUIDE.md  TIMEOUT_CONFIG_REPORT.md  UI_FIX_REPORT.md
examples/: optimized_generation_example.py
scripts/: check_env.py
src/: __init__.py
src/api/: __init__.py  client.py
src/config/: __init__.py  generation_params.py  paths.py  providers.py  secrets.py  supabase_client.py  supabase_init.py
src/core/: __init__.py  enhanced_context.py  optimized_generator.py  quality_assessor.py  style_optimizer.py  unified_assessor.py
src/core/coherence/: __init__.py  character_tracker.py  context_builder.py  hierarchical_summary.py  plot_manager.py  validator.py  world_db.py
src/core/prompts/: __init__.py  advanced_templates.py  manager.py  scene_planner.py  system_prompts.py  templates.py  variables.py
src/ui/: __init__.py  app.py
src/ui/components/: coherence_viz.py
src/ui/features/: __init__.py  auto_generation.py  auto_generation.py.broken  batch_generation.py  cache_manager.py  outline.py  params_config.py  polish.py  polish_advanced.py  prompt_editor.py  rewrite.py
src/utils/: api_logger.py  logging_config.py
